# tree-sitter-motoko

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  compile_flags.txt  go.mod  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test.tree.txt  tree-sitter-motoko.wasm  tree-sitter.json  vendor-grammar.txt
bindings/c/: tree-sitter-motoko.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_motoko/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterMotoko/: motoko.h
bindings/swift/TreeSitterMotokoTests/: TreeSitterMotokoTests.swift
helix-queries/: highlights.scm
scripts/: clone_helix_queries.ps1
smoke/: test2.mo  test4.mo
src/: grammar.json  node-types.json  parser.c  scanner.c
